welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:7: error: expected class or object definition
def marque(c:Color) {
^PatternPicture:11: error: Unmatched closing brace '}' ignored here
  }
  ^